<resources>
    <string name="app_name">TouchAlexa</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="speech_fragment_label">Speech</string>
    <string name="login_fragment_label">Login to Alexa</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="button_login">Login to Alexa</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment_label">Device Home</string>
    <string name="button_home_alerts"><![CDATA[Alarms & Timers]]></string>
    <string name="fragment_alerts_label"><![CDATA[Alarms & Timers]]></string>
    <string name="fragment_setting_time_zone_label">TimeZone Setting</string>
</resources>